// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Separator renders correctly horizontally 1`] = `
<DocumentFragment>
  .cache-9647qq {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #eeeeff;
}

.cache-9647qq.cache-9647qq {
  margin-top: 16px;
  margin-bottom: 16px;
}

<hr
    aria-orientation="horizontal"
    class="eoti1h20 cache-9647qq e7ah3bn0"
    role="separator"
  />
</DocumentFragment>
`;

exports[`Separator renders correctly vertically 1`] = `
<DocumentFragment>
  .cache-wop3bv {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #eeeeff;
}

<hr
    aria-orientation="vertical"
    class="eoti1h20 cache-wop3bv e7ah3bn0"
    role="separator"
  />
</DocumentFragment>
`;

exports[`Separator renders correctly with custom color 1`] = `
<DocumentFragment>
  .cache-1kvvnm0 {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #4f0599;
}

<hr
    aria-orientation="horizontal"
    class="eoti1h20 cache-1kvvnm0 e7ah3bn0"
    role="separator"
  />
</DocumentFragment>
`;

exports[`Separator renders correctly with custom icon 1`] = `
<DocumentFragment>
  .cache-1hm0aef {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-1ozhuda {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #eeeeff;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-1pqb3ep {
  fill: #d4dae7;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1pqb3ep.cache-1pqb3ep {
  vertical-align: middle;
  margin-top: 8px;
  margin-bottom: 8px;
}

<div
    aria-orientation="horizontal"
    class="eoti1h21 cache-1hm0aef e7ah3bn0"
    role="separator"
  >
    <hr
      class="eoti1h20 cache-1ozhuda e7ah3bn0"
    />
    <svg
      class="sc-ui-icon etwatq50 cache-1pqb3ep e7ah3bn0"
      viewBox="0 0 24 24"
    >
      <path
        d="M1,12L5,16V13H17.17C17.58,14.17 18.69,15 20,15A3,3 0 0,0 23,12A3,3 0 0,0 20,9C18.69,9 17.58,9.83 17.17,11H5V8L1,12Z"
        style="transform: rotate(-90deg); transform-origin: 50% 50%;"
      />
    </svg>
    <hr
      class="eoti1h20 cache-1ozhuda e7ah3bn0"
    />
  </div>
</DocumentFragment>
`;

exports[`Separator renders correctly with custom icon horizontally 1`] = `
<DocumentFragment>
  .cache-djph28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-djph28.cache-djph28 {
  margin-top: 16px;
  margin-bottom: 16px;
}

.cache-1ozhuda {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #eeeeff;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-1pqb3ep {
  fill: #d4dae7;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1pqb3ep.cache-1pqb3ep {
  vertical-align: middle;
  margin-top: 8px;
  margin-bottom: 8px;
}

<div
    aria-orientation="horizontal"
    class="eoti1h21 cache-djph28 e7ah3bn0"
    role="separator"
  >
    <hr
      class="eoti1h20 cache-1ozhuda e7ah3bn0"
    />
    <svg
      class="sc-ui-icon etwatq50 cache-1pqb3ep e7ah3bn0"
      viewBox="0 0 24 24"
    >
      <path
        d="M1,12L5,16V13H17.17C17.58,14.17 18.69,15 20,15A3,3 0 0,0 23,12A3,3 0 0,0 20,9C18.69,9 17.58,9.83 17.17,11H5V8L1,12Z"
        style="transform: rotate(-90deg); transform-origin: 50% 50%;"
      />
    </svg>
    <hr
      class="eoti1h20 cache-1ozhuda e7ah3bn0"
    />
  </div>
</DocumentFragment>
`;

exports[`Separator renders correctly with custom icon vertically 1`] = `
<DocumentFragment>
  .cache-pn35pl {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-3huhz5 {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #eeeeff;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-1pqb3ep {
  fill: #d4dae7;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1pqb3ep.cache-1pqb3ep {
  vertical-align: middle;
  margin-top: 8px;
  margin-bottom: 8px;
}

<div
    aria-orientation="vertical"
    class="eoti1h21 cache-pn35pl e7ah3bn0"
    role="separator"
  >
    <hr
      class="eoti1h20 cache-3huhz5 e7ah3bn0"
    />
    <svg
      class="sc-ui-icon etwatq50 cache-1pqb3ep e7ah3bn0"
      viewBox="0 0 24 24"
    >
      <path
        d="M1,12L5,16V13H17.17C17.58,14.17 18.69,15 20,15A3,3 0 0,0 23,12A3,3 0 0,0 20,9C18.69,9 17.58,9.83 17.17,11H5V8L1,12Z"
        style="transform: rotate(-90deg); transform-origin: 50% 50%;"
      />
    </svg>
    <hr
      class="eoti1h20 cache-3huhz5 e7ah3bn0"
    />
  </div>
</DocumentFragment>
`;

exports[`Separator renders correctly with custom thickness 1`] = `
<DocumentFragment>
  .cache-1yf7c1w {
  margin: 0;
  border: 0;
  width: auto;
  height: 3px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #eeeeff;
}

<hr
    aria-orientation="horizontal"
    class="eoti1h20 cache-1yf7c1w e7ah3bn0"
    role="separator"
  />
</DocumentFragment>
`;

exports[`Separator renders correctly with default props 1`] = `
<DocumentFragment>
  .cache-e1pml1 {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #eeeeff;
}

<hr
    aria-orientation="horizontal"
    class="eoti1h20 cache-e1pml1 e7ah3bn0"
    role="separator"
  />
</DocumentFragment>
`;

exports[`Separator renders correctly with raw color 1`] = `
<DocumentFragment>
  .cache-1u8vlmq {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #121212;
}

<hr
    aria-orientation="horizontal"
    class="eoti1h20 cache-1u8vlmq e7ah3bn0"
    role="separator"
  />
</DocumentFragment>
`;
